--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "root",
+  "name": "root v.1.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/streamflow-finance/js-sdk.git"
